--- a/android-engineer.html
+++ b/android-engineer.html
@@ -56,15 +56,15 @@
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SteppingUpSolutions/743999687451554-senior-embedded-android-engineer'>Stepping Up Solutions  Senior Embedded Android Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SteppingUpSolutions/743999687451554-senior-embedded-android-engineer'>Stepping Up Solutions  Senior Embedded Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692139910-senior-android-engineer'>4Catalyzer Senior Android Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692139910-senior-android-engineer'>4Catalyzer Senior Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/riv/397f4279-5288-4e9c-aa33-6662d724c99d'>Rival - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/riv/397f4279-5288-4e9c-aa33-6662d724c99d'>Rival - Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -94,11 +94,11 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4207908002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
+<h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4207908002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4350174002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4350174002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -186,7 +186,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/frontapp/d53335a0-7a2e-43b4-acc4-dee7791376b2'>Front - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/frontapp/d53335a0-7a2e-43b4-acc4-dee7791376b2'>Front - Android Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -227,7 +227,7 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/houzz/258d7b4c-9d59-4a6e-be7b-82bd10468bea'>Houzz - Junior Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/258d7b4c-9d59-4a6e-be7b-82bd10468bea'>Houzz - Junior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -245,7 +245,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999691353725-android-platform-engineer'>K4Connect Android Platform Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999691353725-android-platform-engineer'>K4Connect Android Platform Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -295,7 +295,7 @@ Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p
 <p><span class="badge badge-light">Bordeaux France</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4316376002'>Job Application for Senior Android Engineer at KeepTruckin</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4316376002'>Job Application for Senior Android Engineer at KeepTruckin</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -319,7 +319,7 @@ Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p
 <p><span class="badge badge-light">Los Angeles Los Angeles</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/takescoop/4f382b09-4a8d-4376-9c78-a5ffac4ef73e'>Scoop - Senior Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/takescoop/4f382b09-4a8d-4376-9c78-a5ffac4ef73e'>Scoop - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -344,7 +344,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dice/jobs/4321461002'>Job Application for Senior Android Engineer at DICE</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dice/jobs/4321461002'>Job Application for Senior Android Engineer at DICE</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
@@ -356,7 +356,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/virginpulse/job/oF6nafw2'>Virgin Pulse Careers - Android Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/virginpulse/job/oF6nafw2'>Virgin Pulse Careers - Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -392,7 +392,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/rakutenrewards/jobs/4334286002'>Job Application for Android Engineer  at Rakuten Rewards (formerly Ebates)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rakutenrewards/jobs/4334286002'>Job Application for Android Engineer  at Rakuten Rewards (formerly Ebates)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
@@ -432,7 +432,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---San-Francisco/Android-or-iOS-Mobile-Engineer--Senior---Lead---Principal-_JR36192'>Android or iOS Mobile Engineer (Senior / Lead / Principal)</a></h5> 
+<h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---San-Francisco/Android-or-iOS-Mobile-Engineer--Senior---Lead---Principal-_JR36192'>Android or iOS Mobile Engineer (Senior / Lead / Principal)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Senior Software Engineer - Secrets Team | California - San Francisco ? Senior 
 Data Scientist | California - San Francisco ? Senior Software Engineer (MuleSoft)
